--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
       <section class="intro">
         <div class="background-img-mobile"></div>
         <img class="intro-img" src="images/hero-img-desktop.png">
+        <img class="divider-header" src="images/border-top.png">
         <div class="intro-text-container">
             <h1 class="intro-header"><span class="intro-header-span1">Welcome,</span> <span class="intro-header-span2">My Name is John</span></h1>
             <p class="intro-paragraph">As a highly motivated and results-driven Junior Front-End Developer, I am passionate about bringing creative solutions to life through the design and development of user-centered websites and applications. With a solid understanding of HTML, CSS, and JavaScript, I strive to produce visually appealing and intuitive user experiences.</p>
@@ -170,8 +171,8 @@
         </ul>
       </section>
       <img class="divider" src="images/border-divider.png">
-      <section class="projects">
-        
+      <section class="projects-container">
+        <h2 class="projects-header">Projects</h2>
       </section>
     </main>
     <script src="script.js"></script>
