--- a/index.html
+++ b/index.html
@@ -201,17 +201,15 @@
         </div>  
       </section>
       <img class="divider" src="images/border-divider.png">
+
       <footer class="contact-info">
+        <h2 class="contact-header">Contact</h2>
         <ul class="contact-container">
-          <li><a href="mailto:johngrudzinski@yahoo.com"><i class="fas fa-envelope"></i></a></li>
-          <li><a href="https://github.com/Zero-K00L"><i class="fab fa-github"></i></a></li>
-          <li><a href="https://www.linkedin.com/in/john-grudzinski-960379262/"><i class="fab fa-linkedin"></i></a></li>
+          <li><a class="contact-icon" href="mailto:johngrudzinski@yahoo.com"><i class="fas fa-envelope"></i></a></li>
+          <li><a class="contact-icon"  href="https://github.com/Zero-K00L"><i class="fab fa-github"></i></a></li>
+          <li><a class="contact-icon"  href="https://www.linkedin.com/in/john-grudzinski-960379262/"><i class="fab fa-linkedin"></i></a></li>
         </ul>
       </footer>
-      
-      
-
-      </section>
     </main>
     <script src="script.js"></script>
   </body>
