--- a/index.html
+++ b/index.html
@@ -8,12 +8,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&display=swap" rel="stylesheet">
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
-
-
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
     <title>John Grudzinski Portfolio</title>
   </head>
@@ -25,46 +22,28 @@
         <div id="overlay" class="overlay has-fade">
           <div class="header-display">
             <a class="features-mobile-header" href="#">Intro</a>
-            <img class="down-arrow1 arrow" src="images/icon-arrow-down.svg" alt="" aria-hidden="true">
             <ul class="features-submenu">
-              <li>
-                <img class="icon icon-1" src="images/icon-todo.svg" alt="" aria-hidden="true">
-              </li>
               <li class="submenu-option">
                 Todo List 
-              </li>
-              <li>
-                <img class="icon icon-2" src="images/icon-calendar.svg" alt="" aria-hidden="true">
               </li>
               <li class="submenu-option">
                 Calendar
               </li>
-              <li>
-                <img class="icon icon-3" src="images/icon-reminders.svg" alt="" aria-hidden="true">
-              </li>
               <li class="submenu-option">
                 Reminders
-              </li>
-              <li>
-                <img class="icon icon-4" src="images/icon-planning.svg" alt="" aria-hidden="true">
               </li>
               <li class="submenu-option">
                 Planning
               </li>
             </ul>
-            <a class="company-mobile-header" href="#">About Me</a>
-            <img class="down-arrow2 arrow" src="images/icon-arrow-down.svg" alt="" aria-hidden="true">
+            <a class="company-mobile-header" href="#">Skills</a>
             <ul class="company-submenu">
               <li>History</li>
               <li>Our Team</li>
               <li>Blog</li>
             </ul>
-            <a href="#">Careers</a>
-            <a href="#">About</a>
-          </div>
-          <div class="login-container">
-            <a class="login" href="#">Projects</a>
-            <button class="register-btn">Contact</button>
+            <a href="#">Projects</a>
+            <a href="#">Contact</a>
           </div>
         </div>
         <div id="overlay2" class="overlay-2 has-fade2"></div>
@@ -169,11 +148,14 @@
         </ul>
         <ul class="frameworks-container">
           <li class="frameworks-header">Frameworks:</li>
-          <li class="">Angular</li>
+          <li class="">Angular,</li>
+          <li class="">Tailwind</li>
         </ul>
         <ul class="tools-container">
           <li class="tools-header">Tools:</li>
-          <li>Git</li>
+          <li>Git,</li>
+          <li>Adobe XD,</li>
+          <li>Photoshop</li>
         </ul>
       </section>
       <img class="divider" src="images/border-divider.png">
