--- a/index.html
+++ b/index.html
@@ -61,18 +61,18 @@
           <!-- Desktop Navigation Menu -->
           <ul class="header-nav">
             <li class="header-item">
-              <a href="#" class="header-link header-features">Intro</a>
+              <a href="#intro-text-container" class="header-link header-intro">Intro</a>
              
             </li>
-            <li class="header-item header-company">
-              <a href="#" class="header-link company-link">Skills</a>
+            <li class="header-item header-skills">
+              <a href="#skills" class="header-link header-skills">Skills</a>
             
             </li>
             <li class="header-item header-careers">
-              <a href="#" class="header-link">Projects</a>
+              <a href="#projects" class="header-link">Projects</a>
             </li>
             <li class="header-item header-about">
-              <a href="#" class="header-link">Contact</a>
+              <a href="#contact" class="header-link">Contact</a>
             </li>
 
           </ul>
@@ -89,7 +89,7 @@
         <div class="background-img-mobile"></div>
  
         <img class="divider-header" src="images/border-top.png">
-        <div class="intro-text-container">
+        <div id="intro-text-container" class="intro-text-container">
 <!--             <img class="intro-img" src="images/hero-img-desktop.png"> -->
             <h1 class="intro-header"><span class="intro-header-span1">Welcome,</span> <span class="intro-header-span2">My Name is John</span></h1>
             <p id="introduction" class="intro-paragraph">I'm a highly motivated and results-driven Junior Front-End Developer, I am passionate about bringing creative solutions to life through the design and development of user-centered websites and applications. With a solid understanding of HTML, CSS, and JavaScript, I strive to produce visually appealing and intuitive user experiences.</p>
@@ -97,7 +97,7 @@
       </section>
       <img class="divider" src="images/border-divider.png">
 
-      <section class="skills">
+      <section id="skills" class="skills">
         <h2 class="skills-header">Skills</h2>
         <ul class="languages-container">
           <li class="languages-header">Languages:</li>
@@ -124,7 +124,7 @@
         </ul>
       </section>
       <img class="divider" src="images/border-divider.png">
-      <section class="projects-container">
+      <section id="projects" class="projects-container">
         <h2 class="projects-header">Projects</h2>
         <div class="project-container">
           <div class="project">
@@ -149,7 +149,7 @@
       </section>
       <img class="divider" src="images/border-divider.png">
 
-      <footer class="contact-info">
+      <footer id="contact" class="contact-info">
         <h2 class="contact-header">Contact</h2>
         <ul class="contact-container">
           <li><a class="contact-icon" href="mailto:johngrudzinski@yahoo.com"><i class="fas fa-envelope"></i></a></li>
