--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
     <title>John Grudzinski Portfolio</title>
   </head>
@@ -41,13 +38,13 @@
             <a class="contact-submenu-header" href="#">Contact</a>
             <ul class="contact-submenu">
               <li>
-                <a class="contact-icon submenu-icon" href="mailto:johngrudzinski@yahoo.com"><i class="fas fa-envelope"></i></a>
+                <a class="contact-icon submenu-icon" href="mailto:johngrudzinski@yahoo.com">johngrudzinski@yahoo.com </a>
               </li>
-              <li><a class="contact-icon submenu-icon"  href="https://github.com/Zero-K00L"><i class="fab fa-github"></i></a>
+              <li><a class="contact-icon submenu-icon"  href="https://github.com/Zero-K00L">Github</a>
               </li>
-              <li><a class="contact-icon submenu-icon"  href="https://www.linkedin.com/in/john-grudzinski-960379262/"><i class="fab fa-linkedin"></i></a>
+              <li><a class="contact-icon submenu-icon"  href="https://www.linkedin.com/in/john-grudzinski-960379262/">LinkedIn</a>
               </li>
-              <li><a class="contact-icon submenu-icon" href="tel:6465961649"><i class="fas fa-phone"></i></a>
+              <li><a class="contact-icon submenu-icon" href="tel:6465961649">646-596-1649</a>
               </li>
             </ul>
 
@@ -78,8 +75,9 @@
           </ul>
           <div class="header-menu-container">
             <a href="#" id="btnHamburger" class="header-menu">
+              <span class="hamburger-menu menu-line0-1"></span>
               <span class="hamburger-menu menu-line-1"></span>
-              <span class="hamburger-menu menu-line-2"></span>
+              <span class="hamburger-menu menu-line-1"></span>
             </a>
           </div>
         </nav>
