--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <h2 class="skills-header">Skills</h2>
         <ul class="languages-container">
           <li class="languages-header">Languages:</li>
-          <li class="skill-entry">Javascipt(ES5, ES6),</li>
+          <li class="skill-entry">Javascipt,</li>
           <li class="skill-entry">Python,</li>   
           <li class="skill-entry">HTML5,</li> 
           <li class="skill-entry">CSS3</li>
@@ -150,10 +150,10 @@
       <footer id="contact" class="contact-info">
         <h2 class="contact-header">Contact</h2>
         <ul class="contact-container">
-          <li><a class="contact-icon" href="mailto:johngrudzinski@yahoo.com"><i class="fas fa-envelope"></i></a></li>
-          <li><a class="contact-icon"  href="https://github.com/Zero-K00L"><i class="fab fa-github"></i></a></li>
-          <li><a class="contact-icon"  href="https://www.linkedin.com/in/john-grudzinski-960379262/"><i class="fab fa-linkedin"></i></a></li>
-          <li><a class="contact-icon" href="tel:6465961649"><i class="fas fa-phone"></i></a></li>
+          <li><a class="contact-icon" href="mailto:johngrudzinski@yahoo.com"><i class="fas fa-envelope"><span class="email-label">johngrudzinski@yahoo.com</span></i></a></li>
+          <li><a class="contact-icon"  href="https://github.com/Zero-K00L"><i class="fab fa-github"> Github</i></a></li>
+          <li><a class="contact-icon"  href="https://www.linkedin.com/in/john-grudzinski-960379262/"><i class="fab fa-linkedin">LinkedIn</i></a></li>
+          <li><a class="contact-icon" href="tel:6465961649"><i class="fas fa-phone"><span class="phone-label">(646) 596-1649</span></i></a></li>
         </ul>
 
       </footer>
