--- a/index.html
+++ b/index.html
@@ -112,9 +112,8 @@
         <h2 class="projects-header">Projects</h2>
         <div class="project-container">
           <div class="project">
-            <h3>Project 1</h3>
-            <a href="project1.html">
-              <img src="project1-thumbnail.jpg" alt="Project 1 Thumbnail">
+            <a href="https://zero-k00l.github.io/intro-section-with-dropdown-navigation-main/" target="_blank">
+              Intro Section With Dropdown Navigation
             </a>
           </div>
           <div class="project">
