--- a/index.html
+++ b/index.html
@@ -111,21 +111,19 @@
       <section id="projects" class="projects-container">
         <h2 class="projects-header">Projects</h2>
         <div class="project-container">
-          <div class="project">
+          <div class="project project-1">
             <a href="https://zero-k00l.github.io/intro-section-with-dropdown-navigation-main/" target="_blank">
               Intro Section With Dropdown Navigation
             </a>
           </div>
-          <div class="project">
-            <h3>Project 2</h3>
+          <div class="project project-2">
             <a href="project2.html">
-              <img src="project2-thumbnail.jpg" alt="Project 2 Thumbnail">
+              E-commerce Product Page
             </a>
           </div>
-          <div class="project">
-            <h3>Project 3</h3>
+          <div class="project project-3">
             <a href="project3.html">
-              <img src="project3-thumbnail.jpg" alt="Project 3 Thumbnail">
+              Bank Landing Page
             </a>
           </div>
         </div>  
