Project section fixes

--- a/index.html
+++ b/index.html
@@ -23,18 +23,18 @@
             <a class="projects-submenu-header" href="#">Projects</a>
             <ul class="projects-submenu">
               <li class="submenu-option">
-                <a href="project1.html">Project I</a>
+                <a href="https://zero-k00l.github.io/Project/" target="_blank">Project I</a>
               </li>
               <li class="submenu-option">
-                <a href="project2.html">Project II</a>
+                <a href="https://zero-k00l.github.io/intro-section-with-dropdown-navigation-main/" target="_blank">Project II</a>
               </li>
               <li class="submenu-option">
-                <a href="project3.html">Project III</a>
+                <a href="https://zero-k00l.github.io/ecommerce-product-page-main/" target="_blank">Project III</a>
               </li>
             </ul>
             <a class="contact-submenu-header" href="#">Contact</a>
             <ul class="contact-submenu">
-              <li><a class="contact-icon submenu-icon"  href="https://github.com/Zero-K00L">Github</a>
+              <li><a class="contact-icon submenu-icon"  href="https://github.com/Zero-K00L?tab=repositories">Github</a>
               </li>
               <li><a class="contact-icon submenu-icon"  href="https://www.linkedin.com/in/john-grudzinski-960379262/">LinkedIn</a>
               </li>
@@ -112,18 +112,18 @@
         <h2 class="projects-header">Projects</h2>
         <div class="project-container">
           <div class="project project-1">
-            <a href="https://zero-k00l.github.io/intro-section-with-dropdown-navigation-main/" target="_blank">
-              Intro Section With Dropdown Navigation
+            <a href="https://zero-k00l.github.io/Project/" target="_blank">
+              Bank Landing Page
             </a>
           </div>
           <div class="project project-2">
-            <a href="project2.html">
-              E-commerce Product Page
+            <a href="https://zero-k00l.github.io/intro-section-with-dropdown-navigation-main/">
+              Intro Section With Dropdown Navigation
             </a>
           </div>
           <div class="project project-3">
-            <a href="project3.html">
-              Bank Landing Page
+            <a href="https://zero-k00l.github.io/ecommerce-product-page-main/" target="_blank">
+              E-commerce Product Page
             </a>
           </div>
         </div>  
@@ -134,7 +134,7 @@
         <h2 class="contact-header">Contact</h2>
         <ul class="contact-container">
           <li><a class="contact-icon" href="mailto:johngrudzinski@yahoo.com"><i class="fas fa-envelope"><span class="email-label icon-label">johngrudzinski@yahoo.com</span></i></a></li>
-          <li><a class="contact-icon"  href="https://github.com/Zero-K00L"><i class="fab fa-github"> <span class="icon-label">Github</span></i></a></li>
+          <li><a class="contact-icon"  href="https://github.com/Zero-K00L?tab=repositories"><i class="fab fa-github"> <span class="icon-label">Github</span></i></a></li>
           <li><a class="contact-icon"  href="https://www.linkedin.com/in/john-grudzinski-960379262/"><i class="fab fa-linkedin"><span class="icon-label">LinkedIn</span></i></a></li>
           <li><a class="contact-icon" href="tel:6465961649"><i class="fas fa-phone"><span class="phone-label icon-label">(646) 596-1649</span></i></a></li>
         </ul>
