Image File Path Fixes

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="image/png" sizes="32x32" href="images/tree.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="Images/tree.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap" rel="stylesheet">
@@ -49,7 +49,6 @@
         </div>
         <div id="overlay2" class="overlay-2 has-fade2"></div>
         <nav>
-          <img class="header-logo" src="Images/tree-logo.png" alt="" aria-hidden="true">  
           <ul class="header-nav">
             <li class="header-item">
               <a href="#intro-text-container" class="header-link header-intro">Intro</a>
@@ -75,13 +74,13 @@
       </header>
       <section class="intro">
         <div class="background-img-mobile"></div>
-        <img class="divider-header" src="images/border-top.png">
+        <img class="divider-header" src="Images/border-top.png" alt="" aria-hidden="true">
         <div id="intro-text-container" class="intro-text-container">
             <h1 class="intro-header"><span class="intro-header-span1">Welcome,</span> <span class="intro-header-span2">My Name is John</span></h1>
             <p id="introduction" class="intro-paragraph">I'm a highly motivated and results-driven Junior Front-End Developer, I am passionate about bringing creative solutions to life through the design and development of user-centered websites and applications. With a solid understanding of HTML, CSS, and JavaScript, I strive to produce visually appealing and intuitive user experiences.</p>
         </div>
       </section>
-      <img class="divider" src="images/border-divider.png">
+      <img class="divider" src="Images/border-divider.png" alt="" aria-hidden="true">
       <section id="skills" class="skills">
         <h2 class="skills-header">Skills</h2>
         <ul class="languages-container">
@@ -108,7 +107,7 @@
           <li class="skill-entry">Photoshop</li>
         </ul>
       </section>
-      <img class="divider" src="images/border-divider.png">
+      <img class="divider" src="Images/border-divider.png" alt="" aria-hidden="true">
       <section id="projects" class="projects-container">
         <h2 class="projects-header">Projects</h2>
         <div class="project-container">
@@ -129,7 +128,7 @@
           </div>
         </div>  
       </section>
-      <img class="divider" src="images/border-divider.png">
+      <img class="divider" src="Images/border-divider.png" alt="" aria-hidden="true">
 
       <footer id="contact" class="contact-info">
         <h2 class="contact-header">Contact</h2>
