Link Spacing Fix

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
         </div>
         <div id="overlay2" class="overlay-2 has-fade2"></div>
         <nav>
+          <img class="header-logo" src="Images/tree-logo.png" alt="" aria-hidden="true">
           <ul class="header-nav">
             <li class="header-item">
               <a href="#intro-text-container" class="header-link header-intro">Intro</a>
