--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             </a>
           </div>
           <div class="project project-2">
-            <a href="https://zero-k00l.github.io/intro-section-with-dropdown-navigation-main/">
+            <a href="https://zero-k00l.github.io/intro-section-with-dropdown-navigation-main/" target="_blank">
               Intro Section With Dropdown Navigation
             </a>
           </div>
