Project Section Changes

--- a/index.html
+++ b/index.html
@@ -112,25 +112,24 @@
       <section id="projects" class="projects-container">
         <h2 class="projects-header">Projects</h2>
         <div class="project-container">
-          <div class="project project-1">
-            <a href="https://zero-k00l.github.io/Project/" target="_blank">
+          <a class="project project-1" href="https://zero-k00l.github.io/Project/" target="_blank">
+            <p>
               Bank Landing Page
-            </a>
-          </div>
-          <div class="project project-2">
-            <a href="https://zero-k00l.github.io/intro-section-with-dropdown-navigation-main/" target="_blank">
+            </p>
+          </a>
+          <a class="project project-2" href="https://zero-k00l.github.io/intro-section-with-dropdown-navigation-main/" target="_blank">
+            <p>
               Intro Section With Dropdown Navigation
-            </a>
-          </div>
-          <div class="project project-3">
-            <a href="https://zero-k00l.github.io/ecommerce-product-page-main/" target="_blank">
+            </p>
+          </a>
+          <a class="project project-3" href="https://zero-k00l.github.io/ecommerce-product-page-main/" target="_blank">
+            <p>
               E-commerce Product Page
-            </a>
-          </div>
+            </p>
+          </a>
         </div>  
       </section>
       <img class="divider" src="Images/border-divider.png" alt="" aria-hidden="true">
-
       <footer id="contact" class="contact-info">
         <h2 class="contact-header">Contact</h2>
         <ul class="contact-container">
