Hamburger Submenu Options Changes

--- a/index.html
+++ b/index.html
@@ -19,8 +19,39 @@
         <!-- Mobile Navigation Menu -->
         <div id="overlay" class="overlay has-fade">
           <div class="header-display">
-            <a class="intro-mobile-header" href="#introduction">Intro</a>
-            <a class="company-mobile-header" href="#">Skills</a>
+            <a class="intro-mobile-header" href="#">Intro</a>
+            <ul class="intro-submenu">
+              <li>Summary</li>
+              <li>Highly motivated and results-driven.</li>
+              <li>Passionate about bringing creative solutions to life.</li>
+              <li>Solid understanding of HTML, CSS and Javascript.</li>
+            </ul>
+            <a class="skills-mobile-header" href="#">Skills</a> 
+            <div class="skills-submenu">
+              <ul class="languages-container">
+                <li class="languages-header">Languages:</li>
+                <li class="skill-entry">Javascipt,</li>
+                <li class="skill-entry">Python,</li>   
+                <li class="skill-entry">HTML5,</li> 
+                <li class="skill-entry">CSS3</li>
+              </ul>
+              <ul class="libraries-container">
+                <li class="libraries-header">Libraries:</li>
+                <li class="skill-entry">React,</li>
+                <li class="skill-entry">jQuery</li>
+              </ul>
+              <ul class="frameworks-container">
+                <li class="frameworks-header">Frameworks:</li>
+                <li class="skill-entry">Angular,</li>
+                <li class="skill-entry">Tailwind</li>
+              </ul>
+              <ul class="tools-container">
+                <li class="tools-header">Tools:</li>
+                <li class="skill-entry">Git,</li>
+                <li class="skill-entry">Adobe XD,</li>
+                <li class="skill-entry">Photoshop</li>
+              </ul>
+            </div>
             <a class="projects-submenu-header" href="#">Projects</a>
             <ul class="projects-submenu">
               <li class="submenu-option">
