Final Commit - Branch Features Put on Hold

--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
               <ul class="frameworks-container">
                 <li class="frameworks-header">Frameworks:</li>
                 <li class="skill-entry">Angular,</li>
-                <li class="skill-entry">Tailwind</li>
+                <li class="skill-entry">Tailwind,</li>
+                <li class="skill-entry">Node.js</li>
               </ul>
               <ul class="tools-container">
                 <li class="tools-header">Tools:</li>
@@ -130,7 +131,8 @@
         <ul class="frameworks-container">
           <li class="frameworks-header">Frameworks:</li>
           <li class="skill-entry">Angular,</li>
-          <li class="skill-entry">Tailwind</li>
+          <li class="skill-entry">Tailwind,</li>
+          <li class="skill-entry">Node.js</li>
         </ul>
         <ul class="tools-container">
           <li class="tools-header">Tools:</li>
@@ -168,7 +170,7 @@
           <li><a class="contact-icon"  href="https://www.linkedin.com/in/john-grudzinski-960379262/"><i class="fab fa-linkedin"><span class="icon-label">LinkedIn</span></i></a></li>
         </ul>
       </footer>
-      <form id="contact-form" action="#" method="POST">
+      <form id="contact-form" action="/contact" method="POST">
         <div class="form-group">
           <label for="name">Name:</label>
           <input type="text" id="name" name="name" required>
